[Build] Disable security manager in the Test Data Manager
Currently, the policy file is only generated as the 'test' task runs.
However, as the Test Data Manager copies the entire list of system
properties of the corresponding test task, the 'KotlinSecurityManager'
happens to be activated there as well. And, unless the policy file was
already generated before, the Test Data Manager execution will fail.

This commit is a work-around. One of proper solutions may be extracting
policy generation to a separate task so both 'test' and 'manageTestData'
can depend on it (see KT-84278).

^KT-81101